--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -47,5 +47,8 @@ notebooks_that_submit_jobs = [
 # memory on a reasonable device.
 notebooks_no_mock = [
     "docs/guides/hello-world.ipynb",
+    "docs/guides/serverless-first-program.ipynb",
+    "docs/guides/serverless-manage-resources.ipynb",
+    "docs/guides/serverless-run-first-workload.ipynb",
     "docs/guides/noise-learning.ipynb"
 ]
