--- a/.github/workflows/api-checks.yml
+++ b/.github/workflows/api-checks.yml
@@ -15,11 +15,10 @@ on:
   workflow_dispatch:
   pull_request:
     paths:
-      - "docs/api/qiskit/**/*"
-      - "docs/api/qiskit-ibm-runtime/**/*"
+      - "docs/api/**/*"
       - "public/api/**/*"
-      - "scripts/checkInternalLinks.ts"
-      - "scripts/lib/links/ignores.ts"
+      - "public/images/api/**/*"
+      - "scripts/js/**/*"
 
 jobs:
   api-checks:
@@ -42,8 +41,6 @@ jobs:
           --historical-apis
           --skip-broken-historical
       - name: Check for orphan pages
-        run: >
-          npm run check:orphan-pages --
-          --current-apis
-          --dev-apis
-          --historical-apis
+        run: npm run check:orphan-pages -- --apis
+      - name: Check metadata
+        run: npm run check:metadata -- --apis
