Add to qiskit_bot

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -127,6 +127,8 @@ notifications:
     - "@beckykd"
   "docs/guides/operator-class":
     - "`@mtreinish`"
+  "docs/guides/online-lab-environments":
+    - "@beckykd"
   "docs/guides/primitives":
     - "@ElePT"
   "docs/guides/primitives-examples":
