Changes for add-ons

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -147,6 +147,9 @@ notifications:
   "docs/guides/serverless":
     - "@jenglick"
     - "@pandasa123"
+  "docs/guides/qiskit-add-ons":
+    - "@jenglick"
+    - "@beckyd"
   "docs/guides/qiskit-transpiler-service":
     - "@cbjuan"
     - "@d-kremer"
