--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -139,6 +139,18 @@ notifications:
   "docs/guides/processor-types":
     - "`@lerongil`"
     - "@abbycross"
+  "docs/guides/qiskit-code-assistant":
+    - "cbjuan"
+    - "@abbycross"
+    - "@beckykd"
+  "docs/guides/qiskit-code-assistant-jupyterlab":
+    - "cbjuan"
+    - "@abbycross"
+    - "@beckykd"
+  "docs/guides/qiskit-code-assistant-vscode":
+    - "cbjuan"
+    - "@abbycross"
+    - "@beckykd"
   "docs/guides/pulse":
     - "`@nkanazawa1989`"
     - "@abbycross"
