--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -9,6 +9,9 @@ notification_prelude: |
 # we still want their name in the Qiskit Bot message so people know they are
 # relevant.
 notifications:
+  "docs/guides/addons":
+    - "@beckykd"
+    - "@jenglick"
   "docs/guides/ai-transpiler-passes":
     - "@cbjuan"
     - "@d-kremer"
