Add missing quote

--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -37,7 +37,7 @@ notebooks_exclude = [
     "**/.ipynb_checkpoints/**",
     "docs/guides/qedma-qesem.ipynb",
     "docs/guides/q-ctrl-optimization-solver.ipynb",
-    "docs/guides/q-ctrl-performance-management.ipynb,
+    "docs/guides/q-ctrl-performance-management.ipynb",
     "docs/guides/algorithmiq-tem.ipynb",
     "docs/guides/functions.ipynb",
     "docs/guides/qunasys-quri-chemistry.ipynb",
