Sync Functions from closed source (#1947)
Note that we do not test the notebooks in CI.

--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -35,6 +35,13 @@ notebooks_normal_test = [
 # Don't test the following notebooks (this section can include glob patterns)
 notebooks_exclude = [
     "**/.ipynb_checkpoints/**",
+    "docs/guides/qedma-qesem.ipynb",
+    "docs/guides/q-ctrl-optimization-solver.ipynb",
+    "docs/guides/q-ctrl-performance-management.ipynb",
+    "docs/guides/algorithmiq-tem.ipynb",
+    "docs/guides/functions.ipynb",
+    "docs/guides/qunasys-quri-chemistry.ipynb",
+    "docs/guides/ibm-circuit-function.ipynb",
 ]
 
 # The following notebooks submit jobs that can be mocked with a simulator
