Add stakeholders to qiskit bot
Still awaiting final go-ahead that these are the right IDs and that all of them should be notified from Johannes.

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -305,3 +305,53 @@ notifications:
     - "@abbycross"
   "docs/guides/noise-learning":
     - "@kaelynj"
+  "docs/guides/algorithmiq-tem":
+    - "@kaelynj"
+    - "@abbycross"
+    - "@pandasa123"
+    - "@fpietra"
+    - "@panadestein"
+    - "@matteoacrossi"
+  "docs/guides/functions":
+    - "@kaelynj"
+    - "@abbycross"
+    - "@pandasa123"
+    - "@jenglick"
+    - "@garrison"
+  "docs/guides/ibm-circuit-function":
+    - "@kaelynj"
+    - "@abbycross"
+    - "@pandasa123"
+    - "@jenglick"
+    - "@garrison"
+  "docs/guides/q-ctrl-optimization-solver":
+    - "@kaelynj"
+    - "@abbycross"
+    - "@pandasa123"
+    - "@jrowenwu"
+    - "@dcanuto"
+    - "@ThomasMerkh"
+    - "@alexshih"
+  "docs/guides/q-ctrl-performance-management":
+    - "@kaelynj"
+    - "@abbycross"
+    - "@pandasa123"
+    - "@jrowenwu"
+    - "@dcanuto"
+    - "@ThomasMerkh"
+    - "@alexshih"
+  "docs/guides/qedma-qesem":
+    - "@kaelynj"
+    - "@abbycross"
+    - "@pandasa123"
+    - "@GilQedma"
+    - "@avieli"
+    - "@eranfuchs"
+    - "@assafb"
+  "docs/guides/qunasys-quri-chemistry":
+    - "@kaelynj"
+    - "@abbycross"
+    - "@pandasa123"
+    - "@imai-quantum"
+    - "@rykojima"
+    - "@dchung0741"
