Add Senket to Addons

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -12,6 +12,7 @@ notifications:
   "docs/guides/addons":
     - "@beckykd"
     - "@jenglick"
+    - "@pandasa123"
   "docs/guides/ai-transpiler-passes":
     - "@cbjuan"
     - "@d-kremer"
