add new file to other files

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -73,6 +73,8 @@ notifications:
     - "`@lerongil`"
     - "@jyu00"
     - "@beckykd"
+  "docs/guides/measure-qubits":
+    - "@beckykd"
   "docs/guides/get-qpu-information":
     - "@frankharkins"
     - "@abbycross"
