Add functions owner

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -313,18 +313,21 @@ notifications:
     - "@fpietra"
     - "@panadestein"
     - "@matteoacrossi"
+    - "@@johannesgreiner"
   "docs/guides/functions":
     - "@kaelynj"
     - "@abbycross"
     - "@pandasa123"
     - "@jenglick"
     - "@garrison"
+    - "@@johannesgreiner"
   "docs/guides/ibm-circuit-function":
     - "@kaelynj"
     - "@abbycross"
     - "@pandasa123"
     - "@jenglick"
     - "@garrison"
+    - "@@johannesgreiner"
   "docs/guides/q-ctrl-optimization-solver":
     - "@kaelynj"
     - "@abbycross"
@@ -333,6 +336,7 @@ notifications:
     - "@dcanuto"
     - "@ThomasMerkh"
     - "@alexshih"
+    - "@@johannesgreiner"
   "docs/guides/q-ctrl-performance-management":
     - "@kaelynj"
     - "@abbycross"
@@ -341,6 +345,7 @@ notifications:
     - "@dcanuto"
     - "@ThomasMerkh"
     - "@alexshih"
+    - "@@johannesgreiner"
   "docs/guides/qedma-qesem":
     - "@kaelynj"
     - "@abbycross"
@@ -349,6 +354,7 @@ notifications:
     - "@avieli"
     - "@eranfuchs"
     - "@assafb"
+    - "@@johannesgreiner"
   "docs/guides/qunasys-quri-chemistry":
     - "@kaelynj"
     - "@abbycross"
@@ -356,3 +362,4 @@ notifications:
     - "@imai-quantum"
     - "@rykojima"
     - "@dchung0741"
+    - "@@johannesgreiner"
