--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -313,21 +313,21 @@ notifications:
     - "@fpietra"
     - "@panadestein"
     - "@matteoacrossi"
-    - "@@johannesgreiner"
+    - "@johannesgreiner"
   "docs/guides/functions":
     - "@kaelynj"
     - "@abbycross"
     - "@pandasa123"
     - "@jenglick"
     - "@garrison"
-    - "@@johannesgreiner"
+    - "@johannesgreiner"
   "docs/guides/ibm-circuit-function":
     - "@kaelynj"
     - "@abbycross"
     - "@pandasa123"
     - "@jenglick"
     - "@garrison"
-    - "@@johannesgreiner"
+    - "@johannesgreiner"
   "docs/guides/q-ctrl-optimization-solver":
     - "@kaelynj"
     - "@abbycross"
@@ -336,7 +336,7 @@ notifications:
     - "@dcanuto"
     - "@ThomasMerkh"
     - "@alexshih"
-    - "@@johannesgreiner"
+    - "@johannesgreiner"
   "docs/guides/q-ctrl-performance-management":
     - "@kaelynj"
     - "@abbycross"
@@ -345,7 +345,7 @@ notifications:
     - "@dcanuto"
     - "@ThomasMerkh"
     - "@alexshih"
-    - "@@johannesgreiner"
+    - "@johannesgreiner"
   "docs/guides/qedma-qesem":
     - "@kaelynj"
     - "@abbycross"
@@ -354,7 +354,7 @@ notifications:
     - "@avieli"
     - "@eranfuchs"
     - "@assafb"
-    - "@@johannesgreiner"
+    - "@johannesgreiner"
   "docs/guides/qunasys-quri-chemistry":
     - "@kaelynj"
     - "@abbycross"
@@ -362,4 +362,4 @@ notifications:
     - "@imai-quantum"
     - "@rykojima"
     - "@dchung0741"
-    - "@@johannesgreiner"
+    - "@johannesgreiner"
