Convert specify-observables-pauli to notebook

--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -32,6 +32,7 @@ notebooks_normal_test = [
     "docs/guides/error-mitigation-and-suppression-techniques.ipynb",
     "docs/guides/serverless-first-program.ipynb",
     "docs/guides/serverless-run-first-workload.ipynb",
+    "docs/guides/specify-observables-pauli.ipynb",
 ]
 
 # Don't test the following notebooks (this section can include glob patterns)
