Document job limits

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -267,9 +267,12 @@ notifications:
     - "@jyu00"
     - "@ElePT"
     - "@beckykd"
-  "docs/migration-guides/sessions":
+  "docs/guides/job-limits":
     - "@jyu00"
     - "@ElePT"
+    - "@beckykd"
+  "docs/migration-guides/sessions":
+    - "@blakejohnson"
     - "@beckykd"
   "docs/migration-guides/v2-primitives":
     - "@jyu00"
