--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -267,6 +267,9 @@ notifications:
     - "@jyu00"
     - "@ElePT"
     - "@beckykd"
+  "docs/guides/job-limits":
+    - "@blakejohnson"
+    - "@beckykd"
   "docs/migration-guides/sessions":
     - "@jyu00"
     - "@ElePT"
