--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,26 +46,51 @@ jobs:
         run: npm test
 
       - name: Get all changed docs files
-        id: changed-docs-files
+        id: all-changed-files
         uses: tj-actions/changed-files@af2816c65436325c50621100d67f6e853cd1b0f1
         with:
           files: docs/**/*.{md,mdx,ipynb}
           separator: "\n"
+      - name: Get all changed notebooks
+        id: all-changed-notebooks
+        uses: tj-actions/changed-files@af2816c65436325c50621100d67f6e853cd1b0f1
+        with:
+          files: "docs/**/*.ipynb"
+          separator: "\n"
+
       - name: Pull preview image
-        if: steps.changed-docs-files.outputs.any_changed == 'true'
+        if: steps.all-changed-files.outputs.any_changed == 'true'
         run: ./start --pull-only
       - name: Start local Docker preview
-        if: steps.changed-docs-files.outputs.any_changed == 'true'
+        if: steps.all-changed-files.outputs.any_changed == 'true'
         run: |
           ./start --apis &
           sleep 1
       - name: Check that pages render
-        if: steps.changed-docs-files.outputs.any_changed == 'true'
+        if: steps.all-changed-files.outputs.any_changed == 'true'
         run: |
-          echo "${{ steps.changed-docs-files.outputs.all_changed_files }}" > changed.txt
+          echo "${{ steps.all-changed-files.outputs.all_changed_files }}" > changed.txt
           npm run check:pages-render -- --from-file changed.txt
 
       - name: Setup Python environment
         uses: ./.github/actions/set-up-notebook-testing
       - name: nb-tester tests
         run: tox -e nb-tester
+      - name: Lint notebooks
+        shell: python
+        run: |
+          import subprocess, sys
+          files = """${{ steps.all-changed-notebooks.outputs.all_changed_notebooks }}"""
+          args = ["tox", "-e", "lint", "--"] + files.split("\n")
+          try:
+            subprocess.run(args, check=True)
+          except:
+            print(
+              "To fix, install `tox` and run `tox -e fix`.\n\n"
+              "Alternatively, you can download the fixed notebook from CI by going to this PR's "
+              "\"Execute notebooks\" job, clicking \"Summary\" on the upper-left "
+              "of this page, and downloading the \"Executed notebooks\" artifact."
+              "\n\n"
+              "For more information, see https://github.com/Qiskit/documentation/blob/main/README.md#lint-notebooks"
+            )
+            sys.exit(1)
