--- a/.github/ISSUE_TEMPLATE/new-content.yaml
+++ b/.github/ISSUE_TEMPLATE/new-content.yaml
@@ -1,10 +1,10 @@
 name: ✨ Request new content
 description: Make a request to the Content Team to add a new section in the docs.
-labels: ["content request", "new ✨"]
+labels: ["content request", "needs triage 🤔", "content 📄"]
 assignees:
   - abbycross
   - beckykd
-  - javabster
+  - kaelynj
 
 body:
   - type: markdown
