update bug issue template

--- a/.github/ISSUE_TEMPLATE/bug.yaml
+++ b/.github/ISSUE_TEMPLATE/bug.yaml
@@ -1,9 +1,10 @@
 name: 🪲 Content bug or inaccuracy with non-API docs
 description: Report typos, bugs, out-of-date content, broken links, etc.
-labels: ["bug 🐛", "content 📄"]
+labels: ["bug 🐛", "content 📄", "needs triage 🤔"]
 assignees:
   - abbycross
   - beckykd
+  - kaelynj
 
 body:
   - type: markdown
