Rename intro guides page

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -368,5 +368,5 @@ notifications:
     - "@rykojima"
     - "@dchung0741"
     - "@johannesgreiner"
-  "docs/guides/sqd-intro":
+  "docs/guides/qiskit-addons-sqd":
     - "@kaelynj"
