Add initial draft of getting started

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -370,3 +370,5 @@ notifications:
     - "@johannesgreiner"
   "docs/guides/qiskit-addons-sqd":
     - "@kaelynj"
+  "docs/guides/qiskit-addons-sqd-get-started":
+    - "@kaelynj"
