Remove Arnau :sob:

--- a/.github/workflows/weekly-checks.yml
+++ b/.github/workflows/weekly-checks.yml
@@ -80,5 +80,5 @@ jobs:
               repo: context.repo.repo,
               title: "Extended checks failed",
               body: message,
-              assignees: ["frankharkins", "Eric-Arellano", "arnaucasau"]
+              assignees: ["frankharkins", "Eric-Arellano"]
             })
