--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -280,6 +280,8 @@ notifications:
     - "@jyu00"
     - "@ElePT"
     - "@beckykd"
+  "docs/guides/architecture-workload-isolation":
+    - "@beckykd"
   "docs/guides/primitive-input-output":
     - "@kaelynj"
   "docs/guides/primitives-rest-api":
