add Rachel as a file owner

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -282,6 +282,7 @@ notifications:
     - "@beckykd"
   "docs/guides/architecture-workload-isolation":
     - "@beckykd"
+    - "@rachaelhouse"
   "docs/guides/primitive-input-output":
     - "@kaelynj"
   "docs/guides/primitives-rest-api":
