--- a/tox.ini
+++ b/tox.ini
@@ -11,10 +11,15 @@ setenv = PYDEVD_DISABLE_FILE_VALIDATION=1
 commands = test-docs-notebooks {posargs} --config-path scripts/config/notebook-testing.toml
 
 [testenv:{lint,fix}]
-deps = squeaky==0.7.0
-commands = 
-  lint: squeaky --check --no-advice {posargs:docs}
-  fix:  squeaky {posargs:docs}
+deps = 
+  squeaky==0.7.0
+  ruff==0.7.1
+
+commands =
+    lint: ruff check {posargs:docs}
+    lint: squeaky --check --no-advice {posargs:docs}
+    fix: squeaky {posargs:docs}
+    fix: ruff check --fix {posargs:docs}
 
 [testenv:nb-tester]
 deps =
