--- a/tox.ini
+++ b/tox.ini
@@ -17,8 +17,10 @@ deps =
 
 commands =
     lint: ruff check {posargs:docs}
+    lint: ruff format --check {posargs:docs}
     lint: squeaky --check --no-advice {posargs:docs}
     fix: squeaky {posargs:docs}
+    fix: ruff format {posargs:docs}
     fix: ruff check --fix {posargs:docs}
 
 [testenv:nb-tester]
