add to test list

--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -33,6 +33,7 @@ notebooks_normal_test = [
     "docs/guides/serverless-first-program.ipynb",
     "docs/guides/serverless-run-first-workload.ipynb",
     "docs/guides/specify-observables-pauli.ipynb",
+    "docs/guides/get-started-with-primitives.ipynb",
 ]
 
 # Don't test the following notebooks (this section can include glob patterns)
