Add NEAT notebook

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -233,6 +233,10 @@ notifications:
     - "`@mtreinish`"
   "docs/guides/visualize-circuits":
     - "@frankharkins"
+  "docs/guides/debug-qiskit-runtime-jobs":
+   - "@beckykd"
+   - "@abbycross"
+   - "@SamFerracin"
   "docs/migration-guides/index":
     - "@javabster"
   "docs/migration-guides/qiskit-algorithms-module":
