Introduce fractional gates (#1734)
Closes #1526 (and will likely close #1471 @lerongil).

FYI @nbronn here's the draft of the fractional gates page.

---------

Co-authored-by: Abby Mitchell <23662430+javabster@users.noreply.github.com>
Co-authored-by: abbycross <across@us.ibm.com>
Co-authored-by: Yael Ben-Haim <yaelbh@il.ibm.com>
Co-authored-by: Will Shanks <wshaos@posteo.net>

--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -45,6 +45,7 @@ notebooks_exclude = [
     "docs/guides/functions.ipynb",
     "docs/guides/qunasys-quri-chemistry.ipynb",
     "docs/guides/ibm-circuit-function.ipynb",
+    "docs/guides/fractional-gates.ipynb",
 ]
 
 # The following notebooks submit jobs that can be mocked with a simulator
