--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -73,6 +73,8 @@ notifications:
     - "`@lerongil`"
     - "@jyu00"
     - "@beckykd"
+  "docs/guides/fractional-gates":
+    - "@kaelynj"
   "docs/guides/measure-qubits":
     - "@beckykd"
   "docs/guides/get-qpu-information":
