--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -374,3 +374,7 @@ notifications:
     - "@rykojima"
     - "@dchung0741"
     - "@johannesgreiner"
+  "docs/guides/qiskit-addons-sqd":
+    - "@kaelynj"
+  "docs/guides/qiskit-addons-sqd-get-started":
+    - "@kaelynj"
