--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -44,6 +44,7 @@ notebooks_exclude = [
     "docs/guides/functions.ipynb",
     "docs/guides/qunasys-quri-chemistry.ipynb",
     "docs/guides/ibm-circuit-function.ipynb",
+    "docs/guides/qiskit-addons-sqd-get-started.ipynb",
     "docs/guides/fractional-gates.ipynb",
 ]
 
