local mode guide

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -159,6 +159,11 @@ notifications:
     - "cbjuan"
     - "@abbycross"
     - "@beckykd"
+  "docs/guides/qiskit-code-assistant-local":
+    - "@cbjuan"
+    - "@vabarbosa"
+    - "@abbycross"
+    - "@beckykd"
   "docs/guides/pulse":
     - "`@nkanazawa1989`"
     - "@abbycross"
