--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -162,6 +162,8 @@ notifications:
   "docs/guides/qiskit-code-assistant-local":
     - "@cbjuan"
     - "@vabarbosa"
+    - "@lucaburatti7"
+    - "@adarsh-tiwari17"
     - "@abbycross"
     - "@beckykd"
   "docs/guides/pulse":
