--- a/scripts/nb-tester/requirements.txt
+++ b/scripts/nb-tester/requirements.txt
@@ -7,4 +7,7 @@ qiskit-ibm-runtime~=0.32.0
 qiskit-serverless~=0.17.1
 qiskit-ibm-catalog~=0.1
 qiskit-addon-sqd~=0.7.0
+qiskit-addon-utils~=0.1.0
+qiskit-addon-aqc-tensor~=0.1.1
+scipy~=1.14.1
 pyscf~=2.7.0
