Add it to more infra files

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -133,6 +133,10 @@ notifications:
   "docs/guides/monitor-job":
     - "@jyu00"
     - "@beckykd"
+  "docs/guides/serverless-hamsim-template":
+    - "@jenglick"
+    - "@garrison"
+    - "@beckykd"
   "docs/guides/operator-class":
     - "`@mtreinish`"
   "docs/guides/online-lab-environments":
