--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -46,6 +46,7 @@ notebooks_exclude = [
     "docs/guides/ibm-circuit-function.ipynb",
     "docs/guides/qiskit-addons-sqd-get-started.ipynb",
     "docs/guides/fractional-gates.ipynb",
+    "docs/guides/serverless-hamsin-template.ipynb",
 ]
 
 # The following notebooks submit jobs that can be mocked with a simulator
