--- a/scripts/nb-tester/requirements.txt
+++ b/scripts/nb-tester/requirements.txt
@@ -7,4 +7,6 @@ qiskit-ibm-runtime~=0.33.2
 qiskit-serverless~=0.17.1
 qiskit-ibm-catalog~=0.1
 qiskit-addon-sqd~=0.7.0
+qiskit-addon-utils~=0.1.0
+qiskit-addon-obp~=0.1.0
 pyscf~=2.7.0
