Add notebooks to testing.toml

--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -31,6 +31,7 @@ notebooks_normal_test = [
     "docs/guides/serverless-first-program.ipynb",
     "docs/guides/serverless-run-first-workload.ipynb",
     "docs/guides/specify-observables-pauli.ipynb",
+    "docs/guides/qiskit-addons-obp-get-started.ipynb",
 ]
 
 # Don't test the following notebooks (this section can include glob patterns)
