Add serverless guide with function template example: hamiltonian simulation (#2276)
The very rough outline is intact, including the code, but I still need
to write/revise some prose between the cells. Right now this example
uses the `mergedeep` package to merge the user's estimator options with
the function's default. If we need to remove this dependency, then I
will modify the program so that if a user passes estimator options, they
completely replace the function's default.

Closes #2242.

---------

Co-authored-by: Jen Glick <41485571+jenglick@users.noreply.github.com>
Co-authored-by: Rebecca Dimock <beckyd@us.ibm.com>
Co-authored-by: Rebecca Dimock <66339736+beckykd@users.noreply.github.com>

--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -47,6 +47,7 @@ notebooks_exclude = [
     "docs/guides/ibm-circuit-function.ipynb",
     "docs/guides/qiskit-addons-sqd-get-started.ipynb",
     "docs/guides/fractional-gates.ipynb",
+    "docs/guides/serverless-hamsim-template.ipynb",
     "docs/guides/save-jobs.ipynb",
 ]
 
