Add local mode to Qiskit Code Assistant Guide (#2275)
this PR adds instruction for running the Qiskit Code Assistant locally.

Fixes https://github.com/Qiskit/documentation/issues/2251

this is a rough draft so feel free to edit and feedback is greatly
appreciated.


---
CC @cbjuan

---------

Co-authored-by: lucaburatti7 <32306492+lucaburatti7@users.noreply.github.com>
Co-authored-by: adarsh-tiwari17 <187846318+adarsh-tiwari17@users.noreply.github.com>
Co-authored-by: Juan Cruz-Benito <juan.cruz.benito@ibm.com>
Co-authored-by: abbycross <across@us.ibm.com>
Co-authored-by: Juan Cruz-Benito <2938045+cbjuan@users.noreply.github.com>
Co-authored-by: Eric Arellano <14852634+Eric-Arellano@users.noreply.github.com>

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -163,6 +163,13 @@ notifications:
     - "cbjuan"
     - "@abbycross"
     - "@beckykd"
+  "docs/guides/qiskit-code-assistant-local":
+    - "@cbjuan"
+    - "@vabarbosa"
+    - "@lucaburatti7"
+    - "@adarsh-tiwari17"
+    - "@abbycross"
+    - "@beckykd"
   "docs/guides/pulse":
     - "`@nkanazawa1989`"
     - "@abbycross"
