Fix dev docs sync

--- a/.github/workflows/dev-docs-sync.yml
+++ b/.github/workflows/dev-docs-sync.yml
@@ -64,5 +64,5 @@ jobs:
             This PR updates all dev APIs that changed.
             > [!NOTE]
             > This pull request was created by a GitHub action." \
-           --reviewer frankharkins
+           --reviewer frankharkins \
            --reviewer Eric-Arellano
