--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,8 @@ jobs:
 
       - name: File metadata
         run: npm run check:metadata
+      - name: Check images
+        run: npm run check:images
       - name: Spellcheck
         run: npm run check:spelling
       - name: Check Qiskit bot config
