--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -399,3 +399,7 @@ notifications:
     - "@kaelynj"
   "docs/guides/qiskit-addons-aqc-get-started":
     - "@kaelynj"
+  "docs/guides/qiskit-addons-mpf":
+    - "@kaelynj"
+  "docs/guides/qiskit-addons-mpf-get-started":
+    - "@kaelynj"
