Add notebooks to nb-tester

--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -49,6 +49,7 @@ notebooks_exclude = [
     "docs/guides/qiskit-addons-sqd-get-started.ipynb",
     "docs/guides/fractional-gates.ipynb",
     "docs/guides/save-jobs.ipynb",
+    "docs/guides/qiskit-addons-mpf.ipynb",
 ]
 
 # The following notebooks submit jobs that can be mocked with a simulator
