--- a/scripts/nb-tester/requirements.txt
+++ b/scripts/nb-tester/requirements.txt
@@ -9,6 +9,7 @@ qiskit-ibm-catalog~=0.1
 qiskit-addon-sqd~=0.7.0
 qiskit-addon-utils~=0.1.0
 qiskit-addon-aqc-tensor~=0.1.1
+qiskit-addon-mpf~=0.2.0
 scipy~=1.14.1
 qiskit-addon-obp~=0.1.0
 pyscf~=2.7.0
