--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,6 +53,7 @@ jobs:
         with:
           files: docs/**/*.{md,mdx,ipynb}
           separator: "\n"
+          write_output_files: true
 
       - name: Pull preview image
         if: steps.all-changed-files.outputs.any_changed == 'true'
@@ -65,8 +66,7 @@ jobs:
       - name: Check that pages render
         if: steps.all-changed-files.outputs.any_changed == 'true'
         run: |
-          echo "${{ steps.all-changed-files.outputs.all_changed_files }}" > changed.txt
-          npm run check:pages-render -- --from-file changed.txt
+          npm run check:pages-render -- --from-file .github/outputs/all_changed_files.txt
 
       - name: Setup Python environment
         uses: ./.github/actions/set-up-notebook-testing
