Add pulse migration guide

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -286,6 +286,8 @@ notifications:
     - "@jyu00"
     - "@ElePT"
     - "@beckykd"
+  "docs/migration-guides/pulse-migration":
+    - "@kaelynj"
   "docs/guides/job-limits":
     - "@blakejohnson"
     - "@beckykd"
