add to testing toml file

--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -55,6 +55,7 @@ notebooks_exclude = [
 notebooks_that_submit_jobs = [
     "docs/guides/primitive-input-output.ipynb",
     "docs/guides/debug-qiskit-runtime-jobs.ipynb",
+    "docs/guides/primitives-examples.ipynb",
 ]
 
 # The following notebooks submit jobs that are too big to mock with a simulator (or use functions that aren't supported on sims)
