Create primitives-examples.ipynb (mdx -> ipynb) (#2423)
Subissue of #2094

--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -51,13 +51,13 @@ notebooks_exclude = [
     "docs/guides/fractional-gates.ipynb",
 ]
 
-# The following notebooks submit jobs that can be mocked with a simulator
+# The following notebooks submit jobs that can be mocked with a 5Q simulator
 notebooks_that_submit_jobs = [
     "docs/guides/primitive-input-output.ipynb",
     "docs/guides/debug-qiskit-runtime-jobs.ipynb",
 ]
 
-# The following notebooks submit jobs that are too big to mock with a simulator (or use functions that aren't supported on sims)
+# The following notebooks submit jobs that are too big to mock with a 5Q simulator (or use functions that aren't supported on sims)
 # A job is "too big" if a cell can't run in under 5 mins, or we run out of
 # memory on a reasonable device.
 notebooks_no_mock = [
@@ -65,4 +65,5 @@ notebooks_no_mock = [
     "docs/guides/hello-world.ipynb",
     "docs/guides/noise-learning.ipynb",
     "docs/guides/qiskit-addons-obp-get-started.ipynb",
+    "docs/guides/primitives-examples.ipynb",
 ]
