Allow setting patches as files

--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -46,7 +46,7 @@ notebooks = [
 
 # The following notebooks submit jobs that can be mocked with a simulator
 [groups.mockable]
-test-strategies.ci = { provider="qiskit-fake-provider", generic_backend_kwargs={ num_qubits=6 } }
+test-strategies.ci = { patch="qiskit-fake-provider", num_qubits=6 }
 test-strategies.hardware = {}
 notebooks = [
     "docs/guides/debug-qiskit-runtime-jobs.ipynb",
