--- a/.github/workflows/notebook-test.yml
+++ b/.github/workflows/notebook-test.yml
@@ -47,7 +47,7 @@ jobs:
           """.strip().split("\n")
           import os
           github_output = os.getenv("GITHUB_OUTPUT")
-          all_files = "${{ steps.all-changed.outputs.all_changed_files }}".split("\n")
+          all_files = """${{ steps.all-changed.outputs.all_changed_files }}""".split("\n")
 
           config_changed = any(path.startswith("scripts/") for path in all_files)
           extra_deps = config_changed or any(path in EXTRA_DEPS_NOTEBOOKS for path in all_files)
