--- a/scripts/image-tester/pyproject.toml
+++ b/scripts/image-tester/pyproject.toml
@@ -13,7 +13,7 @@ requires-python = ">=3.8"
 license = "Apache-2.0"
 classifiers = [
     "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License",
+    "License :: OSI Approved :: Apache Software License",
     "Operating System :: OS Independent",
 ]
 
