--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -22,7 +22,6 @@ notebooks = [
     "docs/guides/dynamic-circuits-considerations.ipynb",
     "docs/guides/dynamical-decoupling-pass-manager.ipynb",
     "docs/guides/error-mitigation-and-suppression-techniques.ipynb",
-    "docs/guides/fractional-gates.ipynb",
     "docs/guides/get-qpu-information.ipynb",
     "docs/guides/local-testing-mode.ipynb",
     "docs/guides/operator-class.ipynb",
@@ -114,4 +113,7 @@ notebooks = [
 notebooks = [
     # This notebook contains undefined variables so can't run at all.
     "docs/guides/multiverse-computing-singularity.ipynb",
+
+    # This notebook has a hard-coded non-open backend (see #2454)
+    "docs/guides/fractional-gates.ipynb",
 ]
