add to toml file (no_mock for now)

--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -65,4 +65,6 @@ notebooks_no_mock = [
     "docs/guides/noise-learning.ipynb",
     "docs/guides/qiskit-addons-obp-get-started.ipynb",
     "docs/guides/primitives-examples.ipynb",
+    "docs/guides/specify-runtime-options.ipynb",
+
 ]
