Convert Specify Options page to a notebook (#2452)
3rd of 3 tasks in #2094 (but more may need converting)

--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -50,6 +50,7 @@ test-strategies.ci = { patch="qiskit-fake-provider", num_qubits=6 }
 test-strategies.hardware = { patch="qiskit-ibm-runtime-open" }
 notebooks = [
     "docs/guides/debug-qiskit-runtime-jobs.ipynb",
+    "docs/guides/specify-runtime-options.ipynb",
     "docs/guides/primitive-input-output.ipynb",
 ]
 
