MPF Intro and getting started (#2367)
Closes #2109 and closes #2111

---------

Co-authored-by: abbycross <across@us.ibm.com>

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -401,3 +401,7 @@ notifications:
     - "@kaelynj"
   "docs/guides/qiskit-addons-aqc-get-started":
     - "@kaelynj"
+  "docs/guides/qiskit-addons-mpf":
+    - "@kaelynj"
+  "docs/guides/qiskit-addons-mpf-get-started":
+    - "@kaelynj"
