--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -27,6 +27,7 @@ notebooks = [
     "docs/guides/plot-quantum-states.ipynb",
     "docs/guides/pulse.ipynb",
     "docs/guides/qiskit-addons-aqc-get-started.ipynb",
+    "docs/guides/qiskit-addons-mpf-get-started.ipynb",
     "docs/guides/represent-quantum-computers.ipynb",
     "docs/guides/save-circuits.ipynb",
     "docs/guides/save-jobs.ipynb",
@@ -79,6 +80,6 @@ notebooks = [
     "docs/guides/q-ctrl-performance-management.ipynb",
     "docs/guides/qedma-qesem.ipynb",
     "docs/guides/qiskit-addons-sqd-get-started.ipynb",
+    "docs/guides/qiskit-addons-mpf.ipynb",
     "docs/guides/qunasys-quri-chemistry.ipynb",
 ]
-
