--- a/.github/actions/set-up-notebook-testing/action.yml
+++ b/.github/actions/set-up-notebook-testing/action.yml
@@ -52,3 +52,7 @@ runs:
       run: |
         sudo apt-get update
         sudo apt-get install texlive-pictures texlive-latex-extra poppler-utils graphviz
+    
+    - name: Set ulimit
+      # https://github.com/Qiskit/documentation/issues/2387#issuecomment-2523753374
+      run: ulimit -n 6000
