--- a/.github/actions/set-up-notebook-testing/action.yml
+++ b/.github/actions/set-up-notebook-testing/action.yml
@@ -55,4 +55,5 @@ runs:
     
     - name: Set ulimit
       # https://github.com/Qiskit/documentation/issues/2387#issuecomment-2523753374
+      shell: bash
       run: ulimit -n 6000
