add to testing script

--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -34,6 +34,7 @@ notebooks = [
     "docs/guides/serverless-first-program.ipynb",
     "docs/guides/serverless-manage-resources.ipynb",
     "docs/guides/serverless-run-first-workload.ipynb",
+    "docs/guides/serverless-template-hamiltonian-simulation.ipynb",
     "docs/guides/set-optimization.ipynb",
     "docs/guides/simulate-stabilizer-circuits.ipynb",
     "docs/guides/simulate-with-qiskit-aer.ipynb",
