--- a/.github/workflows/notebook-test-extended.yml
+++ b/.github/workflows/notebook-test-extended.yml
@@ -10,7 +10,7 @@
 # copyright notice, and modified files need to carry a notice indicating
 # that they have been altered from the originals.
 
-name: Test notebooks that submit jobs
+name: Test notebooks with test-eagle
 on:
   workflow_dispatch:
 jobs:
