--- a/.github/workflows/notebook-test-cron.yml
+++ b/.github/workflows/notebook-test-cron.yml
@@ -27,6 +27,7 @@ jobs:
         with:
           ibm-quantum-token: ${{ secrets.IBM_QUANTUM_TEST_TOKEN }}
           instance: "client-enablement/documentation/qiskit-documenta"
+          install-linux-deps: true
 
       - name: Execute notebooks
         timeout-minutes: 350
