--- a/.github/workflows/notebook-test-extended.yml
+++ b/.github/workflows/notebook-test-extended.yml
@@ -33,6 +33,7 @@ jobs:
         with:
           ibm-quantum-token: ${{ secrets.IBM_QUANTUM_TEST_TOKEN }}
           instance: "client-enablement/documentation/qiskit-documenta"
+          install-linux-deps: true
 
       - name: Execute notebooks
         run: python scripts/ci/extended-execute-notebooks.py
