more links, qiskit bot, TOC

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -254,6 +254,10 @@ notifications:
     - "@javabster"
   "docs/migration-guides/qiskit-algorithms-module":
     - "@ElePT"
+  "docs/migration-guides/external-providers-primitives-v2":
+    - "@ElePT"
+    - "@jyu00"
+    - "@beckykd"
   "docs/migration-guides/qiskit-opflow-module":
     - "@ElePT"
   "docs/migration-guides/qiskit-quantum-instance":
