--- a/.github/workflows/api-checks.yml
+++ b/.github/workflows/api-checks.yml
@@ -43,3 +43,5 @@ jobs:
         run: npm run check:orphan-pages -- --apis
       - name: Check metadata
         run: npm run check:metadata -- --apis
+      - name: Check images
+        run: npm run check:images -- --apis
