Add tests to sphinx-alt-text-validator

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -86,3 +86,6 @@ jobs:
               "To fix, install tox and run `tox -e fix`."
             )
             sys.exit(1)
+
+      - name: Test packages
+        run: tox -e tests
