--- a/tox.ini
+++ b/tox.ini
@@ -23,8 +23,9 @@ commands =
     fix: ruff format {posargs:docs}
     fix: ruff check --fix {posargs:docs}
 
-[testenv:nb-tester]
+[testenv:tests]
 deps =
   -e scripts/nb-tester
+  -e scripts/image-tester
   pytest
-commands = pytest scripts/nb-tester
+commands = pytest scripts/nb-tester scripts/image-tester
