--- a/tox.ini
+++ b/tox.ini
@@ -28,4 +28,4 @@ deps =
   -e scripts/nb-tester
   -e scripts/image-tester
   pytest
-commands = pytest scripts/nb-tester scripts/image-tester
+commands = pytest
