--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,8 @@ jobs:
         run: npm run check:internal-links
       - name: Check orphaned pages
         run: npm run check:orphan-pages
+      - name: Check stale images
+        run: npm run check:stale-images
       - name: Formatting
         run: npm run check:fmt
       - name: Typecheck
