--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -409,3 +409,7 @@ notifications:
     - "@kaelynj"
   "docs/guides/qiskit-addons-mpf-get-started":
     - "@kaelynj"
+  "docs/guides/qiskit-addons-cutting":
+    - "@kaelynj"
+  "docs/guides/qiskit-addons-cutting-get-started":
+    - "@kaelynj"
