Finish draft of gate cutting page

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -413,3 +413,5 @@ notifications:
     - "@kaelynj"
   "docs/guides/qiskit-addons-cutting-wires":
     - "@kaelynj"
+  "docs/guides/qiskit-addons-cutting-gates":
+    - "@kaelynj"
