Add pages to notebook testing

--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -46,6 +46,8 @@ notebooks = [
     "docs/guides/transpiler-stages.ipynb",
     "docs/guides/visualize-circuits.ipynb",
     "docs/guides/visualize-results.ipynb",
+    "docs/guides/qiskit-addons-cutting-wires.ipynb",
+    "docs/guides/qiskit-addons-cutting-gates.ipynb"
 ]
 
 # Mock the following notebooks using a 6-qubit local simulator
