remove intro to sessions file

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -207,9 +207,6 @@ notifications:
     - "@beckykd"
     - "@abbycross"
     - "`@blakejohnson`"
-  "docs/guides/sessions":
-    - "@jyu00"
-    - "@beckykd"
   "docs/guides/set-optimization":
     - "`@nbronn`"
     - "@beckykd"
@@ -294,6 +291,10 @@ notifications:
     - "@kaelynj"
   "docs/guides/job-limits":
     - "@blakejohnson"
+    - "@beckykd"
+  "docs/migration-guides/sessions":
+    - "@jyu00"
+    - "@ElePT"
     - "@beckykd"
   "docs/migration-guides/v2-primitives":
     - "@jyu00"
