--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -278,6 +278,10 @@ notifications:
     - "@jyu00"
     - "@ElePT"
     - "@beckykd"
+  "docs/migration-guides/qiskit-runtime-from-third-party-provider":
+    - "@jyu00"
+    - "@ElePT"
+    - "@beckykd"
   "docs/migration-guides/qiskit-runtime-from-ibmq-provider":
     - "@jyu00"
     - "@ElePT"
