--- a/scripts/nb-tester/requirements.txt
+++ b/scripts/nb-tester/requirements.txt
@@ -12,4 +12,4 @@ qiskit-addon-mpf~=0.2.0
 qiskit-addon-aqc-tensor~=0.1.2
 qiskit-addon-obp~=0.1.0
 scipy~=1.15.1
-pyscf~=2.8.0
+pyscf~=2.8.0; sys.platform != 'win32'
