--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -34,8 +34,6 @@ notebooks = [
     "docs/guides/represent-quantum-computers.ipynb",
     "docs/guides/save-circuits.ipynb",
     "docs/guides/save-jobs.ipynb",
-    "docs/guides/serverless-first-program.ipynb",
-    "docs/guides/serverless-manage-resources.ipynb",
     "docs/guides/serverless-run-first-workload.ipynb",
     "docs/guides/set-optimization.ipynb",
     "docs/guides/simulate-stabilizer-circuits.ipynb",
@@ -118,4 +116,8 @@ notebooks = [
     # This notebook contains undefined variables so can't run at all.
     "docs/guides/multiverse-computing-singularity.ipynb",
     "docs/guides/function-template-hamiltonian-simulation.ipynb",
+
+    # These notebooks are failing with auth errors and need investigating
+    "docs/guides/serverless-first-program.ipynb",
+    "docs/guides/serverless-manage-resources.ipynb",
 ]
