Add addon utilities page

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -409,3 +409,5 @@ notifications:
     - "@kaelynj"
   "docs/guides/qiskit-addons-mpf-get-started":
     - "@kaelynj"
+  "docs/guides/qiskit-addons-utils":
+    - "@kaelynj"
