--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -44,6 +44,7 @@ notebooks = [
     "docs/guides/transpiler-stages.ipynb",
     "docs/guides/visualize-circuits.ipynb",
     "docs/guides/visualize-results.ipynb",
+    "docs/guides/qiskit-addons-utils.ipynb",
 ]
 
 # Mock the following notebooks using a 6-qubit local simulator
