Fix nb-testing file

--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -45,7 +45,7 @@ notebooks = [
     "docs/guides/visualize-circuits.ipynb",
     "docs/guides/visualize-results.ipynb",
     "docs/guides/qiskit-addons-cutting-wires.ipynb",
-    "docs/guides/qiskit-addons-cutting-gates.ipynb"
+    "docs/guides/qiskit-addons-cutting-gates.ipynb",
     "docs/guides/qiskit-addons-utils.ipynb",
 ]
 
