--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -123,6 +123,9 @@ notifications:
     - "`@jakelishman`"
     - "@taalexander"
     - "@abbycross"
+  "docs/guides/kipu-optimization":
+    - "@abbycross"
+    - "@pandasa123"
   "docs/guides/latest-updates":
     - "@abbycross"
   "docs/guides/manage-cost":
