--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -126,6 +126,8 @@ notifications:
   "docs/guides/kipu-optimization":
     - "@abbycross"
     - "@pandasa123"
+    - "@JanTrautman"
+    - "@Gabriel-Alvarado-Barrios"
   "docs/guides/latest-updates":
     - "@abbycross"
   "docs/guides/manage-cost":
