--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -126,6 +126,7 @@ notifications:
   "docs/guides/kipu-optimization":
     - "@abbycross"
     - "@pandasa123"
+    - "@johannesgreiner"
     - "@JanTrautman"
     - "@Gabriel-Alvarado-Barrios"
   "docs/guides/latest-updates":
