--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -45,7 +45,6 @@ notebooks = [
     "docs/guides/visualize-circuits.ipynb",
     "docs/guides/visualize-results.ipynb",
     "docs/guides/qiskit-addons-cutting-wires.ipynb",
-    "docs/guides/qiskit-addons-cutting-gates.ipynb",
     "docs/guides/qiskit-addons-utils.ipynb",
 ]
 
@@ -83,6 +82,9 @@ notebooks = [
 test-strategies.hardware = { patch="qiskit-ibm-runtime-open" }
 notebooks = [
     "docs/guides/hello-world.ipynb",
+    # The following notebook takes >300s to run and should be executed in the
+    # cron job. Even though it does not use real hardware
+    "docs/guides/qiskit-addons-cutting-gates.ipynb",
 
     # The following notebooks don't seem to work with `test-eagle`, but I'm not
     # sure why. I've added them here to run on the next cron job so we can
