Add Kipu authors to Qiskit bot (#2648)

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -126,6 +126,9 @@ notifications:
   "docs/guides/kipu-optimization":
     - "@abbycross"
     - "@pandasa123"
+    - "@johannesgreiner"
+    - "@JanTrautman"
+    - "@Gabriel-Alvarado-Barrios"
   "docs/guides/latest-updates":
     - "@abbycross"
   "docs/guides/manage-cost":
