--- a/.github/workflows/dev-docs-sync.yml
+++ b/.github/workflows/dev-docs-sync.yml
@@ -26,8 +26,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 18
-      - name: Install Node.js dependencies
-        run: npm ci
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y imagemagick
+          npm ci
 
       - name: Sync dev docs
         run: npx tsx scripts/js/commands/api/syncDevDocs.ts
