--- a/.github/workflows/dev-docs-sync.yml
+++ b/.github/workflows/dev-docs-sync.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y imagemagick
+          curl https://imagemagick.org/archive/binaries/magick --output /usr/bin/magick
           npm ci
 
       - name: Sync dev docs
