--- a/.github/workflows/dev-docs-sync.yml
+++ b/.github/workflows/dev-docs-sync.yml
@@ -29,8 +29,8 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          curl https://imagemagick.org/archive/binaries/magick --output ~/bin/magick
-          sudo chmod +x ~/bin/magick && export PATH="$HOME/bin:$PATH"
+          sudo apt-get install -y imagemagick
+          ln -s /usr/bin/convert /usr/bin/magick
           npm ci
 
       - name: Sync dev docs
