--- a/.github/workflows/dev-docs-sync.yml
+++ b/.github/workflows/dev-docs-sync.yml
@@ -30,7 +30,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y imagemagick
-          ln -s /usr/bin/convert /usr/bin/magick
+          sudo ln -s /usr/bin/convert /usr/bin/magick
           npm ci
 
       - name: Sync dev docs
