--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -313,6 +313,10 @@ notifications:
     - "@jyu00"
     - "@ElePT"
     - "@beckykd"
+  "docs/migration-guides/classic-iqp-to-cloud-iqp":
+    - "@beckykd"
+  "docs/migration-guides/migrate-classic-rest-api":
+    - "@kaelynj"
   "docs/migration-guides/v2-primitives":
     - "@jyu00"
     - "@ElePT"
