--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -23,9 +23,13 @@ notifications:
   "docs/guides/circuit-library":
     - "@Cryoris"
     - "@frankharkins"
+  "docs/guides/calibration-jobs":
+    - "@abbycross"
   "docs/guides/classical-feedforward-and-control-flow":
     - "`@kevinsung`"
     - "`@jakelishman`"
+  "docs/guides/cloud-setup":
+    - "@beckykd"
   "docs/guides/common-parameters":
     - "`@nbronn`"
     - "@beckykd"
@@ -260,6 +264,10 @@ notifications:
   "docs/guides/transpiler-stages":
     - "@kaelynj"
     - "`@mtreinish`"
+  "docs/guides/upgrade-from-open":
+    - "@beckykd"
+  "docs/guides/view-cost":
+    - "@beckykd"
   "docs/guides/visualize-circuits":
     - "@frankharkins"
   "docs/guides/debug-qiskit-runtime-jobs":
