Turn off testing

--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -22,7 +22,6 @@ notebooks = [
     "docs/guides/dynamic-circuits-considerations.ipynb",
     "docs/guides/dynamical-decoupling-pass-manager.ipynb",
     "docs/guides/error-mitigation-and-suppression-techniques.ipynb",
-    "docs/guides/get-qpu-information.ipynb",
     "docs/guides/local-testing-mode.ipynb",
     "docs/guides/operator-class.ipynb",
     "docs/guides/operators-overview.ipynb",
@@ -124,4 +123,8 @@ notebooks = [
 
     # This notebook might work but we didn't have time to test it before merging
     "docs/guides/kipu-optimization.ipynb",
+
+    # These were temporarily broken from the Cloud docs migration.
+    # It's a priority to fix them.
+    "docs/guides/get-qpu-information.ipynb",
 ]
