--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -22,6 +22,7 @@ notebooks = [
     "docs/guides/dynamic-circuits-considerations.ipynb",
     "docs/guides/dynamical-decoupling-pass-manager.ipynb",
     "docs/guides/error-mitigation-and-suppression-techniques.ipynb",
+    "docs/guides/get-qpu-information.ipynb",
     "docs/guides/local-testing-mode.ipynb",
     "docs/guides/operator-class.ipynb",
     "docs/guides/operators-overview.ipynb",
