--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -425,3 +425,5 @@ notifications:
     - "@kaelynj"
   "docs/guides/qiskit-addons-utils":
     - "@kaelynj"
+  "docs/guides/qiskit-code-assistant-openai-api":
+    - "@cbjuan"
