Adding documentation about OpenAI API compatibility for the Qiskit Code Assistant (#2663)
This PR adds documentation about the new compatibility of the Qiskit
Code Assistant with the OpenAI API completion endpoints.

Fixes #2662

---------

Co-authored-by: abbycross <across@us.ibm.com>

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -437,3 +437,5 @@ notifications:
     - "@kaelynj"
   "docs/guides/qiskit-addons-utils":
     - "@kaelynj"
+  "docs/guides/qiskit-code-assistant-openai-api":
+    - "@cbjuan"
