Configure qiskit_bot

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -284,6 +284,8 @@ notifications:
     - "@ElePT"
   "docs/migration-guides/qiskit-quantum-instance":
     - "@ElePT"
+  "docs/migration-guides/qiskit-backend-v1-to-v2":
+    - "@ElePT"
   "docs/migration-guides/qiskit-runtime":
     - "@beckykd"
     - "@jyu00"
