--- a/scripts/nb-tester/requirements.txt
+++ b/scripts/nb-tester/requirements.txt
@@ -11,6 +11,7 @@ qiskit-addon-utils~=0.1.0
 qiskit-addon-mpf~=0.2.0
 qiskit-addon-aqc-tensor~=0.1.2
 qiskit-addon-obp~=0.1.0
-scipy~=1.15.2
+qiskit-addon-cutting~=0.9.0
+scipy~=1.15.1
 pyscf~=2.8.0; sys.platform != 'win32'
 networkx~=3.4.2
