--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -30,6 +30,7 @@ notifications:
     - "`@jakelishman`"
   "docs/guides/cloud-setup":
     - "@beckykd"
+    - "@abbycross"
   "docs/guides/common-parameters":
     - "`@nbronn`"
     - "@beckykd"
@@ -336,11 +337,13 @@ notifications:
     - "@johannesgreiner"
     - "@pacomf"
     - "@Bagherpoor"
+    - "@kaelynj"
   "docs/guides/execution-modes-rest-api":
     - "@born-2learn"
     - "@johannesgreiner"
     - "@pacomf"
     - "@Bagherpoor"
+    - "@kaelynj"
   "docs/guides/transpile-rest-api":
     - "@born-2learn"
     - "@johannesgreiner"
