--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,7 +68,11 @@ jobs:
       - name: Check that pages render (cloud app)
         if: steps.all-changed-files.outputs.any_changed == 'true'
         run: |
-          npm run check:pages-render -- --from-file .github/outputs/all_changed_files.txt
+          npm run check:pages-render -- --from-file .github/outputs/all_changed_files.txt &
+          sleep 1
+      - name: Stop Docker preview (cloud app)
+        if: steps.all-changed-files.outputs.any_changed == 'true'
+        run: docker ps -q | xargs docker stop
       - name: Start local Docker preview (legacy app)
         if: steps.all-changed-files.outputs.any_changed == 'true'
         run: |
