--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,8 +68,7 @@ jobs:
       - name: Check that pages render (cloud app)
         if: steps.all-changed-files.outputs.any_changed == 'true'
         run: |
-          npm run check:pages-render -- --from-file .github/outputs/all_changed_files.txt &
-          sleep 1
+          npm run check:pages-render -- --from-file .github/outputs/all_changed_files.txt
       - name: Stop Docker preview (cloud app)
         if: steps.all-changed-files.outputs.any_changed == 'true'
         run: docker ps -q | xargs docker stop
