--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cheerio": "^1.0.0-rc.12",
     "cspell": "^8.12.1",
     "fast-levenshtein": "^3.0.0",
+    "fast-xml-parser": "^5.0.8",
     "github-slugger": "^2.0.0",
     "globby": "^14.0.2",
     "gray-matter": "^4.0.3",
