--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -25,6 +25,7 @@ notifications:
     - "@frankharkins"
   "docs/guides/calibration-jobs":
     - "@abbycross"
+    - "dtmcclure"
   "docs/guides/classical-feedforward-and-control-flow":
     - "`@kevinsung`"
     - "`@jakelishman`"
